{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 297,
  "lineage": "66638afc-484c-6556-223b-9a62fa58b125",
  "resources": [
    {
      "module": "module.AS-Group",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086618797917:loadbalancer/app/app-lb/6427b75b0b9fe524",
            "arn_suffix": "app/app-lb/6427b75b0b9fe524",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-1699809837.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:086618797917:loadbalancer/app/app-lb/6427b75b0b9fe524",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-073f623ac5e9a4630"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000e66f2058322ab8"
              },
              {
                "subnet_id": "subnet-05b701275fa4a390c"
              },
              {
                "subnet_id": "subnet-0935ea98d1c9916fc"
              },
              {
                "subnet_id": "subnet-0e61e674f7e02e174"
              }
            ],
            "subnets": [
              "subnet-000e66f2058322ab8",
              "subnet-05b701275fa4a390c",
              "subnet-0935ea98d1c9916fc",
              "subnet-0e61e674f7e02e174"
            ],
            "tags": {
              "name": "app-lb"
            },
            "tags_all": {
              "name": "app-lb"
            },
            "vpc_id": "vpc-0d4bfc55917198329",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Network.aws_subnet.publicSNs",
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.AS-Group",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086618797917:listener/app/app-lb/6427b75b0b9fe524/2148a30463164034",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:086618797917:targetgroup/app-tg/fc2292a27223f5f9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086618797917:listener/app/app-lb/6427b75b0b9fe524/2148a30463164034",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:086618797917:loadbalancer/app/app-lb/6427b75b0b9fe524",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.AS-Group.aws_lb.app-lb",
            "module.AS-Group.aws_lb_target_group.app-tg",
            "module.Network.aws_subnet.publicSNs",
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.AS-Group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086618797917:targetgroup/app-tg/fc2292a27223f5f9",
            "arn_suffix": "targetgroup/app-tg/fc2292a27223f5f9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086618797917:targetgroup/app-tg/fc2292a27223f5f9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:086618797917:loadbalancer/app/app-lb/6427b75b0b9fe524"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.AS-Group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:security-group/sg-0c6da7a1f43363ad8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6da7a1f43363ad8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1024
              }
            ],
            "name": "app-SG",
            "name_prefix": "",
            "owner_id": "086618797917",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:internet-gateway/igw-0f0beba3f4a22636e",
            "id": "igw-0f0beba3f4a22636e",
            "owner_id": "086618797917",
            "tags": {
              "name": "App-Gateway"
            },
            "tags_all": {
              "name": "App-Gateway"
            },
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:route-table/rtb-00929632d547ee4d7",
            "id": "rtb-00929632d547ee4d7",
            "owner_id": "086618797917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:route-table/rtb-0f4108e3dfaf22ed3",
            "id": "rtb-0f4108e3dfaf22ed3",
            "owner_id": "086618797917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0beba3f4a22636e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_internet_gateway.iGW",
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f9277ddecf82ee4",
            "route_table_id": "rtb-00929632d547ee4d7",
            "subnet_id": "subnet-05e246b929065d013"
          },
          "dependencies": [
            "module.Network.aws_route_table.private-RT",
            "module.Network.aws_subnet.PrivateSNs",
            "module.Network.aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aadaf1cc1c15c78",
            "route_table_id": "rtb-00929632d547ee4d7",
            "subnet_id": "subnet-0fddbbc0396b55dbe"
          },
          "dependencies": [
            "module.Network.aws_route_table.private-RT",
            "module.Network.aws_subnet.PrivateSNs",
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f402de4cede59fdb",
            "route_table_id": "rtb-0f4108e3dfaf22ed3",
            "subnet_id": "subnet-0e61e674f7e02e174"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.iGW",
            "module.Network.aws_route_table.public-RT",
            "module.Network.aws_subnet.publicSNs",
            "module.Network.aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000dfe4fff1708abe",
            "route_table_id": "rtb-0f4108e3dfaf22ed3",
            "subnet_id": "subnet-000e66f2058322ab8"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.iGW",
            "module.Network.aws_route_table.public-RT",
            "module.Network.aws_subnet.publicSNs",
            "module.Network.aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd5a05a332a0ddd2",
            "route_table_id": "rtb-0f4108e3dfaf22ed3",
            "subnet_id": "subnet-05b701275fa4a390c"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.iGW",
            "module.Network.aws_route_table.public-RT",
            "module.Network.aws_subnet.publicSNs",
            "module.Network.aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfafbe8fcbb4cae7",
            "route_table_id": "rtb-0f4108e3dfaf22ed3",
            "subnet_id": "subnet-0935ea98d1c9916fc"
          },
          "dependencies": [
            "module.Network.aws_internet_gateway.iGW",
            "module.Network.aws_route_table.public-RT",
            "module.Network.aws_subnet.publicSNs",
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSNs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:subnet/subnet-05e246b929065d013",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e246b929065d013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086618797917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "PrivateSN-1"
            },
            "tags_all": {
              "name": "PrivateSN-1"
            },
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:subnet/subnet-0fddbbc0396b55dbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fddbbc0396b55dbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086618797917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "PrivateSN-2"
            },
            "tags_all": {
              "name": "PrivateSN-2"
            },
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSNs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:subnet/subnet-0e61e674f7e02e174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e61e674f7e02e174",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "086618797917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "PublicSN-1"
            },
            "tags_all": {
              "name": "PublicSN-1"
            },
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:subnet/subnet-000e66f2058322ab8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000e66f2058322ab8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "086618797917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "PublicSN-2"
            },
            "tags_all": {
              "name": "PublicSN-2"
            },
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:subnet/subnet-05b701275fa4a390c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b701275fa4a390c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "086618797917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "PublicSN-3"
            },
            "tags_all": {
              "name": "PublicSN-3"
            },
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:subnet/subnet-0935ea98d1c9916fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0935ea98d1c9916fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "086618797917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "PublicSN-4"
            },
            "tags_all": {
              "name": "PublicSN-4"
            },
            "vpc_id": "vpc-0d4bfc55917198329"
          },
          "dependencies": [
            "module.Network.aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086618797917:vpc/vpc-0d4bfc55917198329",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0b615a5ed0287bdcf",
            "default_route_table_id": "rtb-06095896ea586f9c7",
            "default_security_group_id": "sg-073f623ac5e9a4630",
            "dhcp_options_id": "dopt-0c44779f2781a9bc0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4bfc55917198329",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06095896ea586f9c7",
            "owner_id": "086618797917",
            "tags": {
              "name": "mainvpc"
            },
            "tags_all": {
              "name": "mainvpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}